--- a/src/app/shareds/components/auth-sidebar/auth-sidebar.component.html
+++ b/src/app/shareds/components/auth-sidebar/auth-sidebar.component.html
@@ -15,7 +15,7 @@
         <clr-vertical-nav-group-children>
           <a
             clrVerticalNavLink
-            routerLink="./normal/pidgey"
+            routerLink="../patient-list"
             routerLinkActive="active"
           >
             <cds-icon
