--- a/src/app/shareds/components/auth-sidebar/auth-sidebar.component.html
+++ b/src/app/shareds/components/auth-sidebar/auth-sidebar.component.html
@@ -9,14 +9,20 @@
   </header>
   <div class="content-container">
     <clr-vertical-nav [clrVerticalNavCollapsible]="true">
-      <clr-vertical-nav-group routerLinkActive="active">
+      <clr-vertical-nav-group [routerLinkActive]="active">
+        <a
+          [routerLink]="['/', AppURL.Authen, AuthURL.PatientList]"
+          hidden
+          aria-hidden="true"
+        ></a>
         <cds-icon shape="home" clrVerticalNavIcon></cds-icon>
         หน้าหลัก
-        <clr-vertical-nav-group-children>
+        <clr-vertical-nav-group-children *clrIfExpanded="true">
           <a
             clrVerticalNavLink
-            routerLink="../patient-list"
+            [routerLink]="['/', AppURL.Authen, AuthURL.PatientList]"
             routerLinkActive="active"
+            class="active"
           >
             <cds-icon
               shape="employee-group"
@@ -25,11 +31,7 @@
             ></cds-icon>
             ทะเบียนผู้ป่วย</a
           >
-          <a
-            clrVerticalNavLink
-            routerLink="./normal/snorlax"
-            routerLinkActive="active"
-          >
+          <a clrVerticalNavLink routerLink="/xxx" routerLinkActive="active">
             <cds-icon
               shape="bar-chart"
               badge="success"
@@ -42,10 +44,11 @@
       <clr-vertical-nav-group routerLinkActive="active">
         <cds-icon shape="flame" clrVerticalNavIcon></cds-icon>
         บริหารจัดการข้อมูล
-        <clr-vertical-nav-group-children>
+        <clr-vertical-nav-group-children *clrIfExpanded="true">
           <a
+            clrFocusOnViewInit="true"
             clrVerticalNavLink
-            routerLink="./fire/charmander"
+            [routerLink]="['/', AppURL.Authen, AuthURL.NewPatient]"
             routerLinkActive="active"
             >ขึ้นทะเบียนผู้ป่วยรายใหม่</a
           >
